# meta-rl-episodes

./: .gitignore  README.md  env_registry.md
agents/: rl_episode_agent_brief.md  rl_episode_runbook.md  subagent_spawn_prompt.md  track_assignment_template.md  verifiers_env_patterns.md
agents/tracks/: code-debugging.md  data-analysis-sandbox.md  model-threshold.md  multi-turn-state.md  reward-hacking-format.md  science-reasoning.md  sparse-vs-shaped.md  tool-coherence.md
configs/phase0/: alphabet_sort_llama1b_50step.toml  alphabet_sort_qwen08b_1step_16384.toml  alphabet_sort_qwen08b_1step_4096.toml  alphabet_sort_qwen08b_50step.toml  alphabet_sort_qwen2b_1step_16384.toml  alphabet_sort_qwen2b_1step_4096.toml  alphabet_sort_qwen2b_50step.toml  alphabet_sort_qwen35b_a3b_1step_4096.toml  alphabet_sort_qwen35b_a3b_50step.toml  alphabet_sort_qwen4b_1step_16384.toml  alphabet_sort_qwen9b_1step_16384.toml
episodes/: README.md
episodes/2026-06-02-meta-memory-state-001/: artifacts.md  episode.yaml  eval_analysis.py  notebook.md
episodes/2026-06-02-meta-memory-state-001/env/: README.md  meta_memory_state.py  pyproject.toml  test_meta_memory_state.py
episodes/2026-06-03-meta-data-analysis-lite-001/: artifacts.md  episode.yaml  notebook.md
episodes/2026-06-03-meta-data-analysis-lite-001/env/: README.md  meta_data_analysis_lite.py  pyproject.toml  test_meta_data_analysis_lite.py
reports/: phase0_cost_calibration.md
schemas/: episode_record.schema.json
templates/: artifacts.md  env_ref.md  episode_record.yaml  lab_notebook.md  prime_train_config.toml
(+71 files in other folders)
