[project]
name = "meta-data-analysis-lite"
version = "0.2.1"
tags = ["tabular", "data-analysis", "arithmetic", "synthetic", "tools"]
license = "Apache-2.0"
description = "A deterministic small-table arithmetic environment for cheap RL probes."
readme = "README.md"
dependencies = [
    "verifiers>=0.1.9",
    "datasets>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["meta_data_analysis_lite.py", "README.md"]
